<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minorMargin"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/btn_name_save" />

            <ImageView
                android:id="@+id/imageViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minorMargin"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/maxWidth2"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/delete" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minorMargin"
            app:cardCornerRadius="@dimen/cardMarginRadiusContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/minorMargin"
                    app:cardCornerRadius="@dimen/cardMarginRadiusContact">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/minorMargin"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/nameProfile"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textContactDetail" />

                    <EditText
                        android:id="@+id/detail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minorMargin"
                        android:layout_marginTop="@dimen/allMargin"
                        android:layout_marginRight="@dimen/minorMargin"
                        android:layout_marginBottom="@dimen/minorMargin" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/minorMargin"
                    app:cardCornerRadius="@dimen/cardMarginRadiusContact">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/minorMargin"
                        android:layout_marginTop="@dimen/minorMargin"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/numberPhone"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textContactDetail" />

                    <EditText
                        android:id="@+id/detail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minorMargin"
                        android:layout_marginTop="@dimen/allMargin"
                        android:layout_marginRight="@dimen/minorMargin"
                        android:layout_marginBottom="@dimen/minorMargin" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minorMargin"
            app:cardCornerRadius="@dimen/cardMarginRadiusContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minorMargin"
                android:layout_marginTop="@dimen/minorMargin"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/messageSms"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textContactDetail" />

            <EditText
                android:id="@+id/messageSms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/minorMargin"
                android:layout_marginTop="@dimen/allMargin"
                android:layout_marginRight="@dimen/minorMargin"
                android:layout_marginBottom="@dimen/minorMargin"
                android:hint="@string/hintMessageSms" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/back"
        android:layout_margin="@dimen/allMargin"/>

</androidx.constraintlayout.widget.ConstraintLayout>