<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="@drawable/background_one">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginRight="@dimen/allMargin"
        android:layout_marginTop="@dimen/allMargin"
        android:layout_marginBottom="@dimen/random"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/button3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Fire_action"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.288" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="@dimen/allMargin"
        android:src="@drawable/settingsfour"
        app:maxImageSize="@dimen/fab_icon"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonContact"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/logout"
        android:tooltipText="exit"
        android:layout_margin="@dimen/allMargin"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonSetting"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/intro_txt"
        android:textSize="@dimen/Intro_sixe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/minorMarginStat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minorMarginStat"
            app:cardCornerRadius="@dimen/mainCardMarginStat">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/minorMarginStat">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="@dimen/maxWidth"
                    android:scaleType="centerInside"
                    android:layout_marginRight="@dimen/minorMarginStat"
                    android:src="@drawable/placeholder" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewLocation"
                    android:layout_width="@dimen/minorMargin"
                    android:layout_height="@dimen/carHeightStat"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/minorMarginStat"
                    app:cardCornerRadius="@dimen/cardMarginRadiusStat"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </TableRow>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minorMarginStat"
            app:cardCornerRadius="@dimen/mainCardMarginStat">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minorMarginStat">

                <ImageView
                    android:id="@+id/imageViewBluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/maxWidth"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/minorMarginStat"
                    android:src="@drawable/bluetooth_four" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewBluetooth"
                    android:layout_width="@dimen/minorMargin"
                    android:layout_height="@dimen/carHeightStat"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/minorMarginStat"
                    app:cardCornerRadius="@dimen/cardMarginRadiusStat"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewBluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </TableRow>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/minorMargin"
            android:layout_marginRight="@dimen/minorMargin"
            app:cardCornerRadius="@dimen/cardMarginRadiusContact">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/contactHead"
                android:layout_marginLeft="4dp"
                android:textSize="@dimen/textContactSize"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/minorMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>